grammar.js
    source_file: ($) =>
      seq(
        optional($.script_tag),
        optional($.library_name),
        repeat($.import_or_export),
        repeat($.part_directive),
        repeat($.part_of_directive),
        repeat($._top_level_definition),
      ),

    _top_level_definition: ($) =>
      choice(
        $._declaration,
        seq(optional($._metadata), optional("augment"), $.function_signature, $.function_body),
        seq(optional($._metadata), optional("augment"), $.getter_signature, $.function_body),
        seq(optional($._metadata), optional("augment"), $.setter_signature, $.function_body),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.function_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.getter_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.setter_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          choice("final", "const"),
          optional($._type),
          $.static_final_declaration_list,
          ";",
        ),
        seq(optional($._metadata), optional("augment"), "late", "final", optional($._type), $.initialized_identifier_list, ";"),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("late"),
          $._var_or_type,
          $.initialized_identifier_list,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          "external",
          optional("final"),
          optional($._type),
          $.identifier_list,
          ";",
        ),
      ),

    // ========================================================================
    // Library structure (Phase 9)
    // ========================================================================

    _metadata: ($) => repeat1($._annotation),

    _type: ($) =>
      choice(
        seq($.function_type, optional("?")),
        $._type_not_function,
      ),

    _type_not_void: ($) =>
      choice(
        seq($.function_type, optional("?")),
        seq($.record_type, optional("?")),
        $._type_not_void_not_function,
      ),

    void_type: (_) => "void",

    type_arguments: ($) =>
      seq("<", commaSep1($._type), ">"),

    null_literal: (_) => "null",

    true: (_) => "true",
    false: (_) => "false",

    // Numeric literals (with digit separator support for Dart 3.6)
    decimal_integer_literal: (_) =>
      token(sep1(/[0-9]+/, /_+/)),

    hex_integer_literal: (_) =>
      token(seq(choice("0x", "0X"), sep1(/[A-Fa-f0-9]+/, "_"))),

    decimal_floating_point_literal: (_) =>
      token(
        choice(
          seq(
            sep1(/[0-9]+/, /_+/),
            ".",
            sep1(/[0-9]+/, /_+/),
            optional(seq(/[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/))),
          ),
          seq(
            ".",
            sep1(/[0-9]+/, /_+/),
            optional(seq(/[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/))),
          ),
          seq(sep1(/[0-9]+/, /_+/), /[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/)),
        ),
      ),

    // --- Strings ---

    string_literal: ($) =>
      repeat1(
        choice(
          $.string_literal_double_quotes,
          $.string_literal_single_quotes,
          $.string_literal_double_quotes_multiple,
          $.string_literal_single_quotes_multiple,
          $.raw_string_literal_double_quotes,
          $.raw_string_literal_single_quotes,
          $.raw_string_literal_double_quotes_multiple,
          $.raw_string_literal_single_quotes_multiple,
        ),
      ),

    string_literal_double_quotes: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.template_chars_double_single,
            "'",
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        '"',
      ),

    string_literal_single_quotes: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $.template_chars_single_single,
            '"',
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        "'",
      ),

    _sub_string_test: (_) => seq("$", /[^a-zA-Z_{]/),

    symbol_literal: ($) =>
      prec.right(
        seq(
          "#",
          choice(
            seq($.identifier, repeat(seq(".", $.identifier))),
            "~",
            $.binary_operator,
            "[]",
            "[]=",
          ),
        ),
      ),

    // --- Collection literals ---

    list_literal: ($) =>
      seq(
        optional("const"),
        optional($.type_arguments),
        "[",
        commaSepTrailingComma($._element),
        "]",
      ),

    set_or_map_literal: ($) =>
      seq(
        optional("const"),
        optional($.type_arguments),
        "{",
        commaSepTrailingComma($._element),
        "}",
      ),

    _element: ($) =>
      choice(
        $._expression,
        $.pair,
        $.spread_element,
        $.null_aware_element,
        $.null_aware_pair,
        $.if_element,
        $.for_element,
      ),

    null_aware_element: ($) => seq("?", $._expression),

    null_aware_pair: ($) =>
      seq("?", field("key", $._expression), ":", field("value", $._expression)),

    pair: ($) =>
      seq(
        field("key", $._expression),
        ":",
        field("value", choice($._expression, $.null_aware_element)),
      ),

    _expression: ($) =>
      choice(
        $.pattern_assignment,
        $.assignment_expression,
        $.throw_expression,
        seq($._real_expression, repeat($.cascade_section)),
      ),

    _expression_without_cascade: ($) =>
      choice(
        $.assignment_expression,
        $._real_expression,
        $.throw_expression,
      ),

    _real_expression: ($) =>
      choice(
        $.conditional_expression,
        $.logical_or_expression,
        $.if_null_expression,
        $.logical_and_expression,
        $.equality_expression,
        $.relational_expression,
        $.bitwise_or_expression,
        $.bitwise_xor_expression,
        $.bitwise_and_expression,
        $.shift_expression,
        $.additive_expression,
        $.multiplicative_expression,
        $.type_cast_expression,
        $.type_test_expression,
        $._unary_expression,
      ),

    // --- Throw ---

    throw_expression: ($) => seq("throw", field("value", $._expression)),

    // --- Assignment ---

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $.assignable_expression),
          field("operator", $._assignment_operator),
          field("right", $._expression),
        ),
      ),

    _assignment_operator: (_) =>
      choice(
        "=", "+=", "-=", "*=", "/=", "%=", "~/=",
        "<<=", ">>=", ">>>=", "&=", "^=", "|=", "??=",
      ),

    assignable_expression: ($) =>
      choice(
        seq($._primary, $._assignable_selector_part),
        seq("super", $.unconditional_assignable_selector),
        seq($.constructor_invocation, $._assignable_selector_part),
        prec.dynamic(1, $.identifier),
      ),

    _assignable_selector_part: ($) =>
      seq(repeat($.selector), $._assignable_selector),

    // --- Conditional ---

    conditional_expression: ($) =>
      prec.left(
        PREC.CONDITIONAL,
        seq(
          $._real_expression,
          "?",
          field("consequence", $._expression_without_cascade),
          ":",
          field("alternative", $._expression_without_cascade),
        ),
      ),

    // --- If-null ---

    if_null_expression: ($) =>
      prec.left(
        PREC.IF_NULL,
        seq($._real_expression, repeat1(seq("??", $._real_expression))),
      ),

    // --- Logical ---

    logical_or_expression: ($) =>
      prec.left(PREC.LOGICAL_OR, seq($._real_expression, "||", $._real_expression)),

    logical_and_expression: ($) =>
      prec.left(PREC.LOGICAL_AND, seq($._real_expression, "&&", $._real_expression)),

    // --- Equality ---

    equality_expression: ($) =>
      prec.left(
        PREC.EQUALITY,
        choice(
          seq($._real_expression, choice("==", "!="), $._real_expression),
          seq("super", choice("==", "!="), $._real_expression),
        ),
      ),

    // --- Relational ---

    relational_expression: ($) =>
      prec.left(
        PREC.RELATIONAL,
        choice(
          seq($._real_expression, $.relational_operator, $._real_expression),
          seq("super", $.relational_operator, $._real_expression),
        ),
      ),

    relational_operator: (_) => choice("<", ">", "<=", ">="),

    // --- Type test/cast ---

    type_test_expression: ($) =>
      prec(PREC.RELATIONAL, seq($._real_expression, $.type_test)),

    type_test: ($) => seq($.is_operator, $._type_not_void),

    is_operator: (_) => seq("is", optional("!")),

    type_cast_expression: ($) =>
      prec.left(PREC.RELATIONAL, seq($._real_expression, $.type_cast)),

    type_cast: ($) => seq("as", $._type_not_void),

    // --- Bitwise ---

    bitwise_or_expression: ($) =>
      prec.left(
        PREC.BITWISE_OR,
        choice(
          seq($._real_expression, "|", $._real_expression),
          seq("super", repeat1(seq("|", $._real_expression))),
        ),
      ),

    bitwise_xor_expression: ($) =>
      prec.left(
        PREC.BITWISE_XOR,
        choice(
          seq($._real_expression, "^", $._real_expression),
          seq("super", repeat1(seq("^", $._real_expression))),
        ),
      ),

    bitwise_and_expression: ($) =>
      prec.left(
        PREC.BITWISE_AND,
        choice(
          seq($._real_expression, "&", $._real_expression),
          seq("super", repeat1(seq("&", $._real_expression))),
        ),
      ),

    // --- Shift ---

    shift_expression: ($) =>
      prec.left(
        PREC.SHIFT,
        choice(
          seq($._real_expression, $._shift_operator, $._real_expression),
          seq("super", repeat1(seq($._shift_operator, $._real_expression))),
        ),
      ),

    _shift_operator: (_) => choice("<<", ">>>", ">>"),

    // --- Additive ---

    additive_expression: ($) =>
      prec.left(
        PREC.ADDITIVE,
        choice(
          seq($._real_expression, $._additive_operator, $._real_expression),
          seq("super", repeat1(seq($._additive_operator, $._real_expression))),
        ),
      ),

    _additive_operator: (_) => choice("+", "-"),

    // --- Multiplicative ---

    multiplicative_expression: ($) =>
      prec.left(
        PREC.MULTIPLICATIVE,
        choice(
          seq(
            $._unary_expression,
            repeat1(seq(choice("*", "/", "%", "~/"), $._unary_expression)),
          ),
          seq("super", repeat1(seq(choice("*", "/", "%", "~/"), $._unary_expression))),
        ),
      ),

    // --- Unary ---

    _unary_expression: ($) =>
      prec(
        PREC.UNARY_PREFIX,
        choice($._postfix_expression, $.unary_expression),
      ),

    unary_expression: ($) =>
      prec(
        PREC.UNARY_PREFIX,
        choice(
          seq($.prefix_operator, $._unary_expression),
          seq($.negate_operator, $._unary_expression),
          $.await_expression,
          seq(choice("-", "~"), "super"),
          seq(choice("++", "--"), $.assignable_expression),
        ),
      ),

    prefix_operator: (_) => choice("-", "~"),

    negate_operator: (_) => "!",

    await_expression: ($) => seq("await", $._unary_expression),

    // --- Postfix ---

    postfix_expression: ($) =>
      prec.right(
        choice(
          seq($.assignable_expression, choice("++", "--")),
          seq($.constructor_invocation, repeat($.selector)),
        ),
      ),

    // --- Selectors ---

    cascade_section: ($) =>
      prec.left(
        PREC.CASCADE,
        seq(
          choice("..", "?.."),
          $.cascade_selector,
          repeat($.selector),
          optional(seq($._assignment_operator, $._expression_without_cascade)),
        ),
      ),

    cascade_selector: ($) =>
      choice(
        seq(optional("?"), "[", $._expression, "]"),
        $.identifier,
      ),

    // --- Primary expressions ---

    _primary: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.function_expression,
        $.new_expression,
        $.const_object_expression,
        $.parenthesized_expression,
        "this",
        seq("super", choice($.unconditional_assignable_selector, $.argument_part)),
        $.constructor_invocation,
        $.constructor_tearoff,
        $.switch_expression,
        $.static_member_shorthand,
      ),

    static_member_shorthand: ($) =>
      prec.dynamic(-1,
        choice(
          seq(".", $.identifier),
          seq(".", "new"),
          seq("const", ".", choice($.identifier, "new"), $.arguments),
        ),
      ),

    // --- Arguments ---

    arguments: ($) => seq("(", optional($._argument_list), ")"),

    _argument_list: ($) => prec.right(commaSep1TrailingComma($.argument)),

    named_argument: ($) => seq($.label, $._expression),

    // ========================================================================
    // Formal Parameters (Phase 5)
    // ========================================================================

    _formal_parameter_part: ($) =>
      seq(optional($.type_parameters), $.formal_parameter_list),

    formal_parameter_list: ($) =>
      choice(
        seq("(", ")"),
        seq("(", $._normal_formal_parameters, optional(","), ")"),
        seq(
          "(",
          $._normal_formal_parameters,
          ",",
          $.optional_formal_parameters,
          ")",
        ),
        seq("(", $.optional_formal_parameters, ")"),
      ),

    _normal_formal_parameters: ($) => commaSep1($.formal_parameter),

    formal_parameter: ($) => $._normal_formal_parameter,

    _normal_formal_parameter: ($) =>
      seq(
        optional($._metadata),
        choice(
          $._function_formal_parameter,
          $._simple_formal_parameter,
          $.constructor_param,
          $.super_formal_parameter,
        ),
      ),

    _declared_identifier: ($) =>
      seq(
        optional("covariant"),
        $._final_const_var_or_type,
        field("name", $.identifier),
      ),

    _statement: ($) =>
      choice(
        $.block,
        prec.dynamic(1, $.local_function_declaration),
        prec.dynamic(2, $.local_variable_declaration),
        $.for_statement,
        $.while_statement,
        $.do_statement,
        $.switch_statement,
        $.if_statement,
        $.try_statement,
        $.break_statement,
        $.continue_statement,
        $.rethrow_statement,
        $.return_statement,
        $.yield_statement,
        $.yield_each_statement,
        $.expression_statement,
        $.assert_statement,
        $.labeled_statement,
        $.empty_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    expression_statement: ($) => seq($._expression, ";"),

    local_variable_declaration: ($) =>
      choice(
        seq(
          optional($._metadata),
          $.initialized_variable_definition,
          ";",
        ),
        seq(
          optional($._metadata),
          $.pattern_variable_declaration,
          ";",
        ),
      ),

    initialized_variable_definition: ($) =>
      seq(
        $._declared_identifier,
        optional(seq("=", field("value", $._expression))),
        repeat(seq(",", $.initialized_identifier)),
      ),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    _function_name: ($) => $.identifier,
