test/corpus/function_signatures.txt
================================================================================
Simple function signature
================================================================================

main();

--------------------------------------------------------------------------------

(source_file
  (function_signature
    name: (identifier)))

================================================================================
Function signature with void return type
================================================================================

void main();

--------------------------------------------------------------------------------

(source_file
  (function_signature
    name: (identifier)))

================================================================================
Function signature with type
================================================================================

int foo();

--------------------------------------------------------------------------------

(source_file
  (function_signature
    (type_identifier
      (identifier))
    name: (identifier)))
